[package]
name = "unsplash_random_img_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
reqwest = { version = "0.12.3", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
colored = "2.1.0"
indicatif = "0.17.8"

